enabled auth providers & fixed playground overlap

--- a/src/views/models/ModelHeader.scss
+++ b/src/views/models/ModelHeader.scss
@@ -72,6 +72,7 @@
 .tabs {
   display: flex;
   height: 100%;
+  align-items: center;
 
   .tab {
     height: 100%;
